initial commit with trpc

--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.0.0",
+    "@trpc/client": "^10.43.3",
+    "@trpc/next": "^10.43.3",
+    "@trpc/react-query": "^10.43.3",
+    "@trpc/server": "^10.43.3",
+    "next": "^14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "prettier": "^3.1.0",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
