--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@tanstack/react-query": "^4.0.0",
     "@tanstack/react-query-devtools": "^5.8.8",
     "@trpc/client": "^10.43.3",
@@ -17,7 +18,11 @@
     "@trpc/server": "^10.43.3",
     "framer-motion": "^10.16.5",
     "immer": "^10.0.3",
+    "jotai": "^2.6.0",
+    "jotai-devtools": "^0.7.0",
+    "jotai-optics": "^0.3.1",
     "next": "^14.0.2",
+    "optics-ts": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
