--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "optics-ts": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
