--- a/package.json
+++ b/package.json
@@ -7,21 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "unused": "knip"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@tanstack/react-query": "^4.0.0",
-    "@tanstack/react-query-devtools": "^5.8.8",
     "@trpc/client": "^10.43.3",
     "@trpc/next": "^10.43.3",
     "@trpc/react-query": "^10.43.3",
     "@trpc/server": "^10.43.3",
     "@types/uuid": "^9.0.7",
-    "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.5",
-    "immer": "^10.0.3",
     "jotai": "^2.6.0",
     "jotai-devtools": "^0.7.0",
     "jotai-optics": "^0.3.1",
@@ -36,7 +34,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
     "@savvywombat/tailwindcss-grid-areas": "^3.1.0",
-    "@types/node": "^20",
+    "@types/node": "^20.10.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -44,6 +42,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "husky": "^8.0.0",
+    "knip": "^3.10.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
