--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.43.3",
     "@trpc/server": "^10.43.3",
     "@types/uuid": "^9.0.7",
+    "@vercel/analytics": "^1.1.1",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.5",
     "jotai": "^2.6.0",
