Add speed insights

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/server": "^10.43.3",
     "@types/uuid": "^9.0.7",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.5",
     "jotai": "^2.6.0",
