--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "lib": ["DOM", "DOM.ITERABLE", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
