--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "unused": "knip"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.43.3",
     "@trpc/next": "^10.43.3",
