--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "bun",
-      "internalConsoleOptions": "neverOpen",
+      "name": "Next.js + Bun: debug server-side",
+      "type": "node-terminal",
       "request": "launch",
-      "name": "Debug File",
-      "program": "${file}",
-      "cwd": "${workspaceFolder}",
-      "stopOnEntry": false,
-      "watchMode": false
+      "command": "bun dev",
+      "cwd": "${workspaceFolder}"
     },
     {
       "type": "bun",
