--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "postcss": "^8",
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "firebase-tools": "^13.0.3"
+    "typescript": "^5"
   }
 }
