--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "unused": "knip"
+    "unused": "knip",
+    "emulators": "firebase emulators:start"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -23,6 +24,7 @@
     "@types/uuid": "^9.0.7",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
+    "date-fns": "^3.2.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.16.5",
     "jotai": "^2.6.0",
@@ -32,6 +34,7 @@
     "optics-ts": "^2.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
