Able to display averages of previous games

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=bananashell-timegame
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=bananashell-timegame.appspot.com
+STATISTIC_AVERAGES=hide # include | hide
